--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
     <head>
     <meta charset="utf-8">
+    <title>NUBANK</title>
     <link rel="manifest" href="manifest.json">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -43,7 +43,7 @@
 
     </div>
 
-    <div class="d-flex mt-4 container justify-content-start align-items-center" style="padding: 0 1rem; overflow-x: auto; gap: 1rem;">
+    <div class="d-flex mt-4 container justify-content-start align-items-start" style="padding: 0 1rem; overflow-x: auto; gap: 1rem;">
         <div class="d-flex flex-column align-items-center">
             <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; border-radius: 50%; background: rgb(30 30 30);">
                 <img style="height: 1.1rem; filter:invert(1)" src="assets\img\pix_icon_198027.png">
@@ -58,29 +58,30 @@
             </div>
         <div class="d-flex flex-column align-items-center">
             <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-                <img style="height: 1rem;" src="">
+                <img style="height: 1.1rem;" src="assets\img\agenda.png">
             </span>
-            <span style="min-width: 4rem;" class="mt-2 text-center">Transferir</span>
+            <span style="width: 5rem;" class="mt-2 text-center">Ajuda Financeira</span>
             </div>
         <div class="d-flex flex-column align-items-center">
             <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-                <img style="height: 1rem;" src="">
+                <img style="height: 1.1rem;" src="assets/img/device.png">
             </span>
-            <span style="min-width: 4rem;" class="mt-2 text-center">Depositar</span>
+            <span style="width: 6rem;" class="mt-2 text-center">Recarga de Celular</span>
             </div>
         <div class="d-flex flex-column align-items-center">
             <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-                <img style="height: 1rem;" src="">
+                <img style="height: 1.1rem;" src="assets\img\money.png">
             </span>
-            <span style="min-width: 4rem;" class="mt-2 text-center">Área Pix</span>
+            <span style="width: 4rem;" class="mt-2 text-center">Transferir</span>
             </div>
+        
     
 
     </div>
 
     <div class="d-flex mt-4 container justify-content-start align-items-center" style="padding: 0 1rem;">
         <div class="d-flex justify-content-start align-items-center p-3" style="gap:1rem; background: rgb(30 30 30); width:100%; border-radius: 12px;">
-            <img style="height: 1.1rem;" src="">
+            <img style="height: 1.1rem; transform: rotate(90deg);" src="assets\img\credit-card.png">
             <span style="font-size: .9rem;">Meus cartões</span>
         </div>
 
