--- a/index.html
+++ b/index.html
@@ -110,7 +110,25 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="assets/js/index.js"></script>
+    <script>
+  if ('serviceWorker' in navigator && 'PushManager' in window) {
+  navigator.serviceWorker.register('service-worker.js')
+  .then(function(swReg) {
+    console.log('Service Worker está registrado', swReg);
+
+    swReg.pushManager.subscribe({
+      userVisibleOnly: true,
+      applicationServerKey: '<Sua Chave Pública VAPID aqui>'
+    }).then(function(subscription) {
+      console.log('Inscrito para push:', subscription);
+      // Aqui você geralmente enviaria o objeto de inscrição para o seu backend para mantê-lo e usar quando enviar push.
+    }).catch(function(error) {
+      console.error('Falha na inscrição para push:', error);
+    });
+  });
+}
+
+    </script>
 
 </body>
 
