--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
 <body style="background: black; color: #fff;">
 <div class="mt-3 container d-flex align-items-center justify-content-between" style="padding: 0 1rem;">
     <a style="text-decoration: none; color: #fff;" href="/index.html"><span style="font-size: 1.7rem;"><</span></a>   
-    <img style="height: 1.5rem;"  src="assets\img\question.png">
+    <img style="height: 1.5rem;"  src="assets/img/question.png">
 </div>
 
 <div class="mt-4 container d-flex flex-column justify-content-between" style="padding: 0 1rem;">
@@ -31,7 +31,7 @@
 </div>
 <div class="d-flex mt-4 container justify-content-between align-items-center" style="padding: 0 1rem;">
     <span class="d-flex" style="gap: 1rem;">
-        <img style="height: 2rem;" src="assets\img\mobile-data.png">
+        <img style="height: 2rem;" src="assets/img/mobile-data.png">
         <span>Movimento do mês</span>
 
     </span>
@@ -42,7 +42,7 @@
 </div>
 <div class="d-flex mt-4 container justify-content-between align-items-center" style="padding: 0 1rem;">
     <span class="d-flex" style="gap: 1rem;">
-        <img style="height: 2rem; transform: rotate(180deg); transform: scaleX(-1);" src="assets\img\pig.png">
+        <img style="height: 2rem; transform: rotate(180deg); transform: scaleX(-1);" src="assets/img/pig.png">
         <div>
             <span>Dinheiro guardado</span><br>
             <span>R$ 2.617,85</span>
@@ -56,7 +56,7 @@
 </div>  
 <div class="d-flex mt-4 container justify-content-between align-items-center" style="padding: 0 1rem;">
     <span class="d-flex" style="gap: 1rem;">
-        <img style="height: 2rem;" src="assets\img\signal.png">
+        <img style="height: 2rem;" src="assets/img/signal.png">
         <div>
         <span>Rendimento total da conta</span><br>
         <span><span style="color: rgb(115 200 115);">+R$ 78,26</span> este mês</span>
@@ -70,19 +70,19 @@
 <div class="d-flex mt-4 container justify-content-start align-items-start" style="padding: 0 1rem; overflow-x: auto; gap: 1rem;">
     <div class="d-flex flex-column align-items-center">
         <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-            <img style="height: 1.1rem;" src="assets\img\money.png">
+            <img style="height: 1.1rem;" src="assets/img/money.png">
         </span>
         <span style="width: 4rem;" class="mt-2 text-center">Transferir</span>
         </div>
     <div class="d-flex flex-column align-items-center">
         <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-            <img style="height: 1.1rem;" src="assets\img\barcode.png">
+            <img style="height: 1.1rem;" src="assets/img/barcode.png">
         </span>
         <span style="min-width: 4rem;" class="mt-2 text-center">Pagar</span>
         </div>
     <div class="d-flex flex-column align-items-center">
         <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-            <img style="height: 1.1rem;" src="assets\img\money.png">
+            <img style="height: 1.1rem;" src="assets/img/money.png">
         </span>
         <span style="width: 4rem;" class="mt-2 text-center">Transferir</span>
         </div>
@@ -101,7 +101,7 @@
 <div class="d-flex mt-4 container justify-content-start align-items-center" style="padding: 0 1rem;">
     <div class="d-flex justify-content-between align-items-center p-3" style="gap:1rem; background: rgb(30 30 30);max-width: 27.5rem; width:100%; border-radius: 12px;">
         <div class="d-flex align-items-center justify-content-start" style="gap: 1rem;">
-        <img style="height: 1.1rem;" src="assets\img\refund.png">
+        <img style="height: 1.1rem;" src="assets/img/refund.png">
         <span style="font-size: .9rem;">Assistente de pagamentos</span>
     </div>
     <span style="font-size: 1.2rem;">
@@ -124,7 +124,7 @@
 <div class="d-flex mt-2 container justify-content-start align-items-center" style="padding: 0 1rem;">
     <div class="d-flex justify-content-between align-items-center p-3" style="gap:1rem; background: rgb(30 30 30);max-width: 27.5rem; width:100%; border-radius: 30px;">
         <div class="d-flex align-items-center justify-content-start" style="gap: 1rem;">
-        <img style="height: 1.1rem;" src="assets\img\search (1).png">
+        <img style="height: 1.1rem;" src="assets/img/search (1).png">
         <span style="font-size: .9rem;">Buscar</span>
     </div>
 
@@ -136,7 +136,7 @@
 <div class="d-flex justify-content-between align-items-start container mt-5" style="border-bottom: solid .7px #7b7b7b; padding-bottom: 1rem;">
     <div class="d-flex justify-content-start" style="gap: 1rem;">
     <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-            <img style="height: 1.1rem;" src="assets\img\money (1).png">
+            <img style="height: 1.1rem;" src="assets/img/money (1).png">
         </span>
     <div class="d-flex flex-column">
         <span>Transferência recebida</span>
@@ -158,7 +158,7 @@
 <div class="d-flex justify-content-between align-items-start container mt-5" style="border-bottom: solid .7px #7b7b7b; padding-bottom: 1rem;">
     <div class="d-flex justify-content-start" style="gap: 1rem;">
     <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-            <img style="height: 1.1rem;" src="assets\img\money (1).png">
+            <img style="height: 1.1rem;" src="assets/img/money (1).png">
         </span>
     <div class="d-flex flex-column">
         <span>Transferência recebida</span>
@@ -179,7 +179,7 @@
 <div class="d-flex justify-content-between align-items-start container mt-4" style="border-bottom: solid .7px #7b7b7b; padding-bottom: 1rem;">
     <div class="d-flex justify-content-start" style="gap: 1rem;">
     <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-            <img style="height: 1.1rem;" src="assets\img\money (1).png">
+            <img style="height: 1.1rem;" src="assets/img/money (1).png">
         </span>
     <div class="d-flex flex-column">
         <span>Transferência recebida</span>
@@ -200,7 +200,7 @@
 <div class="d-flex justify-content-between align-items-start container mt-4" style="border-bottom: solid .7px #7b7b7b; padding-bottom: 1rem;">
     <div class="d-flex justify-content-start" style="gap: 1rem;">
     <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-            <img style="height: 1.1rem;" src="assets\img\money (1).png">
+            <img style="height: 1.1rem;" src="assets/img/money (1).png">
         </span>
     <div class="d-flex flex-column">
         <span>Transferência recebida</span>
@@ -221,7 +221,7 @@
 <div class="d-flex justify-content-between align-items-start container mt-4" style="border-bottom: solid .7px #7b7b7b; padding-bottom: 1rem;">
     <div class="d-flex justify-content-start" style="gap: 1rem;">
     <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-            <img style="height: 1.1rem;" src="assets\img\money (1).png">
+            <img style="height: 1.1rem;" src="assets/img/money (1).png">
         </span>
     <div class="d-flex flex-column">
         <span>Transferência recebida</span>
@@ -242,7 +242,7 @@
 <div class="d-flex justify-content-between align-items-start container mt-4" style="border-bottom: solid .7px #7b7b7b; padding-bottom: 1rem;">
     <div class="d-flex justify-content-start" style="gap: 1rem;">
     <span class="d-flex align-items-center justify-content-center" style="height: 60px; width: 60px; background: rgb(30 30 30); border-radius: 50%;">
-            <img style="height: 1.1rem;" src="assets\img\money (1).png">
+            <img style="height: 1.1rem;" src="assets/img/money (1).png">
         </span>
     <div class="d-flex flex-column">
         <span>Transferência recebida</span>
